# packaging-publishing

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  breast_cancer_model.pkl  cancer_model.pkl  cancer_model.py  index.html  mkdocs.yml  model.pkl  notebook.ipynb  pyproject.toml  requirements.txt  sitemap.xml  update-fork.sh
.devcontainer/: README.md  devcontainer.json
.github/workflows/: deploy  deploy.yml  documentation.yml
1_setting_up/: index.html
2_project_overview/: index.html
3_poetry/: index.html
4_Testing/: index.html
5_CICD/: index.html
CICD/: index.html
CICD/documentation/: index.html
CICD/precommit/: index.html
CICD/publishing/: index.html
CICD/testing/: index.html
Home/LICENSE/: index.html
Home/about/: index.html
Home/workshop/: index.html
LICENSE/: index.html
Slides/: 4_testing.pptx  Introduction.pptx  Presentation4.pptx  versioncontrol.pptx
cancer_prediction/: __init__.py  app.py  cancer_model.py  streamlit_app.py
cancer_prediction/cli/: __init__.py  app.py
data/: breast_cancer_test.csv  breast_cancer_train.csv
docs/: 1_setting_up.md  2_project_overview.md  3_poetry.md  4_Testing.md  5_CICD.md  index.md  slides.md
docs/CICD/: documentation.md  index.md  precommit.md  publishing.md  testing.md
docs/Home/: about.md  index.md  workshop.md
docs/Poetry/: 3_poetry.md  CLI.md
docs/Slides/: 2_versioncontrol.pptx  3_poetry.pptx  3_uv.pptx  4_testing.pptx  5_documentation.pptx  Poetry.pptx
docs/UV/: 3_uv.md  CLI.md
docs/cancer-prediction/: cancer_model.md  streamlit_app.md
docs/cancer-prediction/cli/: app.md
docs/cancer_prediction/: cancer_model.md  streamlit_app.md
docs/publishing_docs/: documentation.md  publishing.md
docs/resources/: index.md  references.md  slides.md
docs/stylesheets/: extra.css
overrides/: main.html
publishing_docs/documentation/: index.html
publishing_docs/publishing/: index.html
resources/: index.html
resources/references/: index.html
resources/slides/: index.html
scripts/: app.py  streamlit_app.py
search/: search_index.json
tests/: test_CancerModel.py
