[project]
name = "cancer-prediction-eb2043"
version = "0.1.0"
description = "bas"
authors = [
    {name = "eb-mars",email = "84507581+eb-mars@users.noreply.github.com"}
]
license = {text = "MIY"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "typer (>=0.15.3,<0.16.0)"
]

[tool.poetry]
packages = [{include = "cancer_prediction"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
exclude = '''
/(
    venv
    .mypy_cache
    build
    dist
    .git
    .eggs

)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
