[project]
name = "packaging-publishing"
version = "0.1.0"
description = "A hands on guide to packaging and publishing python code"
authors = [
    { name = "Ryan Daniels"},
    { name = "Fin Griffin"},
  ]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit >= 1.40.1",
    "scikit-learn >= 1.5.2",
    "numpy >= 2.1.3",
    "PyMuPDF >= 1.24.13",
    "ipykernel >= 6.30.1",
    "pandas>=2.3.2",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.1,<2.0.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.5.44,<10.0.0",
  "mkdocstrings>=0.27.0,<0.28.0",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"